src/styles/general.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/***
This file contains the general CSS styling, including:

* General Body and Global CSS: Base styles for the entire application.
* Navbar: Styling for the navigation bar.
* General Outlet: Shared styles for outlet components.
* Banner of Outlet.
* Footer: Styling for the footer.
* General Media Queries: Responsive styles for different screen sizes.

I have separated the CSS styling for each page into the following files:

- Location: src/styles/

* style-addnew.css
* style-cart.css
* style-all-products.css
* style-product-detail.css

*/

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	font-family: 'Inter', sans-serif;
}
:root {
	--color-accent: #ef5350;
	--color-white: white;
	--color-neutral-grey-200: #eeeeee;
	--color-neutral-grey-400: #bdbdbd;
	--color-neutral-grey-600: #757575;
	--color-neutral-grey-800: #424242;
	--color-neutral-grey-900: #212121;

	--color-ooa-monotone-1: #d6d8de;
	--color-ooa-monotone-2: #a2a5af;
	--color-ooa-monotone-3: #333740;
	--color-ooa-monotone-4: #1c1d20;
	--color-ooa-monotone-5: #0e0e0e;
}
body {
	display: flex;
	justify-content: center;
	width: 100vw;
	height: 100vh;
	font-size: 1rem;
	color: var(--color-neutral-grey-900);
	background-color: var(--color-neutral-grey-200);
	overflow-x: hidden;
}
main {
	width: 100%;
	display: flex;
	max-width: 1200px;
	min-width: 370px;
	margin: 0 auto;
}
.main-wrapper {
	width: 60%;
	margin: 0 auto;
}

a:link,
a:visited {
	color: var(--color-neutral-grey-900);
	text-decoration: none;
}
[class*='button']:hover {
	cursor: pointer;
}
/* -- Navbar --------------------------------------------------- */

nav.menu__container {
	width: 100%;
	display: flex;
	flex-direction: row;
	position: sticky;
	left: 0;
	top: 0;

	justify-content: space-between;
	align-items: center;

	padding: 1rem 0;
	margin-bottom: 1rem;
	border-bottom: 1px solid var(--color-neutral-grey-900);
	background-color: var(--color-neutral-grey-200);
}
nav.menu__container menu {
	display: flex;
	flex-direction: row;
}
nav.menu__container menu ul {
	display: flex;
	flex-direction: row;
	list-style-type: none;
}
nav.menu__container .sidemenu.button {
	font-size: 1.5rem;
}

nav.menu__container .logo img {
	cursor: pointer;
	width: 50px;
	height: fit-content;
}

nav.menu__container menu .button {
	display: flex;
	cursor: pointer;
	background-color: transparent;
	border: none;
	outline: none;

	text-decoration: none;
}
nav.menu__container menu .button:hover {
	color: var(--color-neutral-grey-600);
	transition: 0.1s ease-in-out;
}
/* -- Navbar-side-nav --------------------------------------------------- */
nav.menu__container .side-nav {
	height: 100vh;
	display: flex;
	width: 0;
	position: fixed;
	z-index: 1;
	top: 0;
	right: 0;
	background-color: var(--color-white);
	overflow-x: hidden;
	transition: 0.2s ease-in-out;
}
nav.menu__container .side-nav ul {
	width: 100%;
	display: flex;
	flex-direction: column;
	padding: 2rem;
	justify-content: space-between;
}
nav.menu__container .side-nav ul li {
	padding: 1rem 0;
}
nav.menu__container .sidemenu.close.button {
	display: flex;
	margin-left: auto;
}
nav.menu__container .side-nav .button.special {
	font-size: 1rem;
}

/* -- Navbar - User --------------------------------------------------- */
.user-info {
	display: flex;
	align-items: center;
	gap: 1rem;
}
.user-photo {
	width: 20px;
	height: 20px;
	border-radius: 100%;
}

/* -- Navbar - Cart Icon --------------------------------------------------- */
.cart-icon {
	display: flex;
	align-items: center;
	font-size: 1.25rem;
	width: fit-content;
}
.cart-icon:hover {
	color: var(--color-ooa-monotone-2);
	transition: 0.1s ease-in-out;
}

.cart-badge {
	position: relative;
	/* right: -1.85rem;
	top: -0.35rem; */

	padding: 2px 6px;
	margin-right: 3px;

	background-color: var(--color-neutral-grey-900);
	color: var(--color-white);
	border-radius: 100%;

	font-size: 0.6rem;
	font-weight: 400;
	text-align: center;
}
/* -- Banner --------------------------------------------------- */

.landing-banner {
	width: 100%;
	display: flex;
	padding-bottom: 3rem;
}
.landing-banner img {
	width: 100%;
	height: 350px;
	object-fit: cover;
	object-position: top;
}
/* -- Outlet --------------------------------------------------- */
.page-title {
	width: 100%;
	padding: 1rem 0 1.6rem 0;
	margin-bottom: 1rem;

	font-size: 1rem;

	text-transform: uppercase;
	text-align: left;
	font-weight: 400;
	border-bottom: 1px solid var(--color-neutral-grey-400);
}
/* -- Footer --------------------------------------------------- */
footer {
	display: flex;
	flex-direction: row;
	border-top: 1px solid var(--color-neutral-grey-900);
	left: 0;
	bottom: 0;
	padding: 2rem 0;
	margin-top: 2rem;
}

footer ul {
	width: 100%;
	display: flex;
	flex-direction: row;
	justify-content: space-between;

	list-style-type: none;
	font-size: 0.7rem;
}

/* ----- Media Queries ------------------------------------------- */
@media (max-width: 1199px) {
	.main-wrapper {
		width: 100%;
		min-width: 400px;
		padding: 1rem;
	}
	section[class$='__page-container'] .sub-wrapper {
		display: flex;
		flex-direction: column;
	}

	footer ul {
		display: flex;
		flex-direction: column;
	}
}

@media (max-width: 768px) {
	/* main {
		padding: 1rem;
	} */
	.main-wrapper {
		width: 100%;
		min-width: 400px;
		padding: 1rem;
	}
}

